# today

./: CHANGELOG.md  Cargo.toml  README.md  example.today
.githooks/: pre-commit
src/: cli.rs  commands.rs  error.rs  eval.rs  files.rs  format.rs  main.rs  parse.rs  parser.rs  source.rs
src/cli/: cancel.rs  done.rs  error.rs  layout.rs  log.rs  new.rs  print.rs  render.rs  show.rs  util.rs
src/cli/layout/: day.rs  line.rs
src/eval/: command.rs  date.rs  date_spec.rs  delta.rs  entries.rs  entry.rs  error.rs  formula_spec.rs  range.rs  util.rs
src/eval/command/: birthday.rs  date.rs  formula.rs
src/files/: arguments.rs  cli.rs  commands.rs  error.rs  format.rs  grammar.pest  parse.rs  primitives.rs
src/parse/: commands.rs  error.rs  grammar.pest  line.rs  parser.rs  todayfile.pest
src/parser/: commands.rs  task.rs
