[package]
name = "today"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive"] }
codespan-reporting = "0.11.1"
colored = "2.0.0"
computus = "1.0.0"
directories = "4.0.1"
edit = "0.1.3"
pest = "2.1.3"
pest_derive = "2.1.0"
promptly = "0.3.0"
termcolor = "1.1.3"
thiserror = "1.0.31"
tzfile = { git = "https://github.com/Garmelon/tzfile.git", branch = "tzdir" }
