[package]
name = "today"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
codespan-reporting = "0.11.1"
colored = "2.0.0"
computus = "1.0.0"
directories = "4.0.1"
edit = "0.1.4"
pest = "2.5.5"
pest_derive = "2.5.5"
promptly = "0.3.1"
termcolor = "1.2.0"
thiserror = "1.0.38"
tzfile = { git = "https://github.com/Garmelon/tzfile.git", branch = "tzdir" }

[lints]
rust.unsafe_code = { level = "forbid", priority = 1 }
rust.future_incompatible = "warn"
rust.rust_2018_idioms = "warn"
rust.noop_method_call = "warn"
rust.single_use_lifetimes = "warn"
rust.trivial_numeric_casts = "warn"
rust.unused = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_extern_crates = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
clippy.all = "warn"
clippy.use_self = "warn"
